@@ -28,7 +28,7 @@ SQLResultExecuterPanel.execStatus=Executing SQL...
 SQLResultExecuterPanel.nonStickyPanel=Cannot make a cancel panel sticky
 SQLResultExecuterPanel.nosqlselected=No SQL selected for execution.
 SQLResultExecuterPanel.outputStatus=Building output...
-SQLResultExecuterPanel.queryStatistics=Query {0} of {1} elapsed time (seconds) - Total: {2}, SQL query: {3}, Building output: {4}
+SQLResultExecuterPanel.queryStatistics=Query {0} of {1}, Rows read: {2}, Elapsed time (seconds) - Total: {3}, SQL query: {4}, Building output: {5}
 SQLResultExecuterPanel.rowsDeleted={0} Row(s) Deleted
 SQLResultExecuterPanel.rowsInserted={0} Row(s) Inserted
 SQLResultExecuterPanel.rowsReturned={0} Row(s) Returned
@@ -71,3 +71,5 @@ SQLHistoryController.mnuAppendSelectionToEditor=Append selected statements to SQ
 PleaseWaitDialog.cancel=Cancel
 PleaseWaitDialog.pleaseWait=Please wait while the query is executed
 PleaseWaitDialog.queryExecuting=Please wait
+
+ResultTab.rowsMessage=Rows {0}
